--- a/front/src/pages/home/index.less
+++ b/front/src/pages/home/index.less
@@ -2,5 +2,70 @@
   display: flex;
   align-items: center;
   height: 100px;
+  color: #fff;
   background: #061524;
+
+  .title {
+    width: 198px;
+    text-align: center;
+  }
+
+  .slogan {
+    background-image: url("../../assets/images/slogan.png");
+    height: 100%;
+    width: 198px;
+    margin-left: 20px;
+  }
+
+  .tip {
+    text-align: right;
+    flex-grow: 1;
+    padding-right: 20px;
+  }
+}
+
+.container {
+  @spacing: 20px;
+  display: flex;
+  padding: @spacing 0;
+  background-color: #f5f5f5;
+
+  .nav {
+    width: 220px;
+    background-color: #fff;
+
+    ul {
+      background-color: #fff;
+      list-style: none;
+    }
+    .nav_item {
+      text-align: right;
+      margin: @spacing 0;
+
+      a {
+        display: inline-block;
+        width: 90%;
+        height: 40px;
+        line-height: 40px;
+        text-decoration: none;
+        color: #666666;
+        text-align: center;
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 20px;
+        &:hover {
+          color: #0396d7;
+        }
+        &.active {
+          color: #0396d7;
+          background-color: #eff5fe;
+        }
+      }
+    }
+  }
+
+  .content {
+    margin-left: 30px;
+    flex-grow: 1;
+    background-color: #fff;
+  }
 }
