--- a/front/src/pages/home/index.less
+++ b/front/src/pages/home/index.less
@@ -65,7 +65,30 @@
 
   .content {
     margin-left: 30px;
-    flex-grow: 1;
+    flex: 1;
     background-color: #fff;
+    padding: 0 25px;
+    height: calc(100vh - 100px);
+    overflow-y: scroll;
+
+    .category_title {
+      height: 60px;
+      line-height: 60px;
+      box-sizing: border-box;
+      border-bottom: 1px solid #edf5fb;
+      color: #333333;
+      font-size: 18px;
+    }
+    .category_list {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+
+      .category_list_item {
+        width: 300px;
+        height: 100px;
+        margin: 20px 0;
+      }
+    }
   }
 }
