开发环境修改，内容补充，布局修改

--- a/front/src/pages/home/index.less
+++ b/front/src/pages/home/index.less
@@ -23,6 +23,12 @@
     padding-right: 20px;
   }
 }
+.notice {
+  background-color: #fff;
+  text-align: right;
+  padding: 10px 0;
+  font-size: 12px;
+}
 
 .container {
   @spacing: 20px;
@@ -81,13 +87,13 @@
     }
     .category_list {
       display: flex;
-      justify-content: space-between;
       flex-wrap: wrap;
 
       .category_list_item {
-        width: 300px;
-        height: 100px;
-        margin: 20px 0;
+        margin-left: 10px;
+        width: 25%;
+        height: 120px;
+        margin: 20px;
       }
     }
   }
