--- a/front/src/app.less
+++ b/front/src/app.less
@@ -33,7 +33,7 @@
 
 .nav {
   display: flex;
-  justify-content: space-around;
+  padding: 0 200px;
   align-items: center;
   height: 40px;
   background-color: #d05b3c;
@@ -67,4 +67,11 @@
   text-align: right;
   padding: 10px 0;
   font-size: 12px;
+
+  img {
+    width: 20px;
+    height: 20px;
+    position: relative;
+    top: 5px;
+  }
 }
