--- a/front/src/pages/resources/index.less
+++ b/front/src/pages/resources/index.less
@@ -59,6 +59,7 @@
       flex-wrap: wrap;
 
       .category_list_item {
+        text-decoration: none;
         margin-left: 10px;
         width: 25%;
         height: 120px;
