--- a/front/src/pages/resources/index.less
+++ b/front/src/pages/resources/index.less
@@ -1,4 +1,3 @@
-
 .container {
   @spacing: 20px;
   display: flex;
@@ -13,6 +12,7 @@
       background-color: #fff;
       list-style: none;
     }
+
     .nav_item {
       text-align: right;
       margin: @spacing 0;
@@ -27,9 +27,11 @@
         text-align: center;
         border-top-left-radius: 20px;
         border-bottom-left-radius: 20px;
+
         &:hover {
           color: #0396d7;
         }
+
         &.active {
           color: #0396d7;
           background-color: #eff5fe;
@@ -53,7 +55,15 @@
       border-bottom: 1px solid #edf5fb;
       color: #333333;
       font-size: 18px;
+      display: flex;
+      justify-content: space-between;
+
+      .download_url {
+        font-size: 14px;
+        color: red;
+      }
     }
+
     .category_list {
       display: flex;
       flex-wrap: wrap;
