--- a/front/src/pages/aboutUs/index.less
+++ b/front/src/pages/aboutUs/index.less
@@ -7,6 +7,11 @@
         padding: 20px;
         display: flex;
 
+        img{
+            width: 328px;
+            height:187.2px;
+        }
+
         .description{
             margin-left: 20px;
         }
