--- a/front/src/pages/effects/heart/heart.less
+++ b/front/src/pages/effects/heart/heart.less
@@ -1,30 +1,33 @@
+@width : 50px;
+@height : 50px;
+
 .main {
-    width: 100px;
-    height: 100px;
+    width: @width;
+    height: @height;
     background-color: red;
     transform: rotate(45deg);
 
     &::before {
         display: inline-block;
-        width: 100px;
-        height: 100px;
-        border-radius: 50px;
+        width: @width;
+        height: @height;
+        border-radius: 50%;
         background-color: red;
         content: "";
         position: absolute;
-        top: -50px;
+        top: -(@width / 2);
         left: 0;
     }
 
     &::after {
         display: inline-block;
-        width: 100px;
-        height: 100px;
-        border-radius: 50px;
+        width: @width;
+        height: @height;
+        border-radius: 50%;
         background-color: red;
         content: "";
         position: absolute;
         top: 0;
-        left: -50px;
+        left: -(@height / 2);
     }
 }
