--- a/front/src/pages/aboutUs/index.less
+++ b/front/src/pages/aboutUs/index.less
@@ -1,6 +1,8 @@
 .container {
     background-color: #f5f5f5;
     padding: 20px 0;
+    width: 1000px;
+    margin: 0 auto;
 
     .content {
         background-color: #fff;
@@ -8,33 +10,24 @@
         display: flex;
         flex-direction: column;
 
-        .secition {
+        .des {
             padding: 20px;
             color: #58666e;
             display: flex;
             border-bottom: 1px dotted #ddd;
-
-            p {
-                margin-bottom: 10px;
-            }
-        }
-
-        .site_des {
-            .secition();
-
-            p {
-                margin-left: 10px;
-            }
-
-            img {
-                width: 328px;
-                height: 187.2px;
-            }
-        }
-
-        .menu_des {
-            .secition();
             flex-direction: column;
+
+            .site {
+                flex-direction: row;
+                img {
+                    width: 328px;
+                    height: 187.2px;
+                }
+
+                p {
+                    margin-bottom: 5px;
+                }
+            }
 
             .title {
                 margin-bottom: 10px;
