博客链接跳转

--- a/front/src/pages/resources/index.less
+++ b/front/src/pages/resources/index.less
@@ -69,10 +69,9 @@
       flex-wrap: wrap;
 
       .category_list_item {
-        text-decoration: none;
         margin-left: 10px;
         width: 25%;
-        height: 120px;
+        max-height: 120px;
         margin: 20px;
       }
     }
