--- a/front/src/pages/blogs/index.less
+++ b/front/src/pages/blogs/index.less
@@ -15,6 +15,8 @@
     overflow-y: scroll;
 
     .category_list_item {
+      text-decoration: none;
+      display: block;
       height: 60px;
       margin: 20px;
       border-bottom: 1px solid #ddd;
