--- a/front/src/pages/resources/index.less
+++ b/front/src/pages/resources/index.less
@@ -68,11 +68,19 @@
       display: flex;
       flex-wrap: wrap;
 
-      .category_list_item {
-        margin-left: 10px;
-        width: 25%;
-        max-height: 120px;
-        margin: 20px;
+      .pdf {
+        margin-top:20px;
+        width: 300px;
+        text-decoration: none;
+        color: #0396d7;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+
+      .category_list_item{
+        margin-top: 20px;
       }
     }
   }
