视频教程补充，代码格式修改

--- a/front/src/pages/resources/index.less
+++ b/front/src/pages/resources/index.less
@@ -69,7 +69,7 @@
       flex-wrap: wrap;
 
       .pdf {
-        margin-top:20px;
+        margin-top: 20px;
         width: 300px;
         text-decoration: none;
         color: #0396d7;
@@ -79,8 +79,9 @@
         }
       }
 
-      .category_list_item{
+      .category_list_item {
         margin-top: 20px;
+        width: 100%;
       }
     }
   }
