内容布局修改

--- a/front/src/components/card/index.less
+++ b/front/src/components/card/index.less
@@ -13,9 +13,10 @@
 
   .description {
     color: #666666;
-    margin-top: 20px;
+    margin-top: 10px;
     overflow: hidden;
     text-overflow: ellipsis;
     font-size: 14px;
+    line-height: 20px;
   }
 }
