--- a/front/src/pages/aboutUs/index.less
+++ b/front/src/pages/aboutUs/index.less
@@ -1,37 +1,32 @@
-.container {
-    background-color: #f5f5f5;
-    padding: 20px 0;
-    margin: 0 auto;
+.content {
+    background-color: #fff;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    margin-left: 250px;
 
-    .content {
-        background-color: #fff;
+    .des {
         padding: 20px;
+        color: #58666e;
         display: flex;
+        border-bottom: 1px dotted #ddd;
         flex-direction: column;
 
-        .des {
-            padding: 20px;
-            color: #58666e;
-            display: flex;
-            border-bottom: 1px dotted #ddd;
-            flex-direction: column;
+        .site {
+            flex-direction: row;
 
-            .site {
-                flex-direction: row;
-
-                img {
-                    width: 328px;
-                    height: 187.2px;
-                }
-
-                p {
-                    margin-bottom: 5px;
-                }
+            img {
+                width: 328px;
+                height: 187.2px;
             }
 
-            .title {
-                margin-bottom: 10px;
+            p {
+                margin-bottom: 5px;
             }
+        }
+
+        .title {
+            margin-bottom: 10px;
         }
     }
 }
