--- a/front/src/pages/aboutUs/index.less
+++ b/front/src/pages/aboutUs/index.less
@@ -1,9 +1,8 @@
 .content {
     background-color: #fff;
     padding: 20px;
-    display: flex;
-    flex-direction: column;
     margin-left: 250px;
+    flex: 1;
 
     .des {
         padding: 20px;
