--- a/front/src/components/hotRank/index.less
+++ b/front/src/components/hotRank/index.less
@@ -4,5 +4,27 @@
     flex-grow: 0;
     margin-left: 20px;
     background-color: #fff;
-    padding: 20px 10px;
+    padding: 0 10px;
+
+    .title {
+        font-size: 18px;
+        height: 60px;
+        line-height: 60px;
+        color: #333333;
+        border-bottom: 1px solid #ddd;
+    }
+
+    .rank_list {
+        list-style: none;
+
+        .rank_item {
+            text-decoration: none;
+            display: block;
+            color: #0396d7;
+            margin-top:10px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
+    }
 }
