--- a/front/src/pages/blogs/index.less
+++ b/front/src/pages/blogs/index.less
@@ -10,7 +10,7 @@
   .category_list_item {
     text-decoration: none;
     display: block;
-    height: 60px;
+    padding-bottom: 10px;
     margin: 20px;
     border-bottom: 1px solid #ddd;
 
