--- a/front/src/app.less
+++ b/front/src/app.less
@@ -84,3 +84,16 @@
   display: flex;
   padding-top: 20px;
 }
+
+.footer{
+  background-color: #202d40;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  color:#486185;
+  font-size: 14px;
+
+  .author{
+    color:#7d818a;
+  }
+}
