--- a/front/src/components/hotRank/index.less
+++ b/front/src/components/hotRank/index.less
@@ -4,7 +4,7 @@
     flex-grow: 0;
     margin-left: 20px;
     background-color: #fff;
-    padding: 0 10px;
+    padding: 0 10px 30px 10px;
 
     .title {
         font-size: 18px;
