--- a/server/src/layouts/index.less
+++ b/server/src/layouts/index.less
@@ -71,6 +71,7 @@
   text-align: right;
   padding: 10px 0;
   font-size: 12px;
+  border-bottom: 1px solid #ddd;
 
   img {
     width: 20px;
@@ -83,4 +84,17 @@
 .content {
   display: flex;
   padding-top: 20px;
+}
+
+.footer{
+  background-color: #202d40;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  color:#486185;
+  font-size: 14px;
+
+  .author{
+    color:#7d818a;
+  }
 }
