--- a/src/document.ejs
+++ b/src/document.ejs
@@ -6,15 +6,16 @@
   <title>前端网</title>
   <meta name="description" content="前端网，免费前端优质资源、教程">
   <meta name="keywords" content="HTML,CSS,JavaScript,React,Vue,NodeJs,前端,免费,教程,源码,开源项目">
+  <meta name="robots" content="nofollow" />
   <script>
     var _hmt = _hmt || [];
-    (function() {
-      var hm = document.createElement("script");
+    ( function () {
+      var hm = document.createElement( "script" );
       hm.src = "https://hm.baidu.com/hm.js?926fb44514b1d81a809cb5380bf10511";
-      var s = document.getElementsByTagName("script")[0]; 
-      s.parentNode.insertBefore(hm, s);
-    })();
-    </script>    
+      var s = document.getElementsByTagName( "script" )[0];
+      s.parentNode.insertBefore( hm, s );
+    } )();
+  </script>
 </head>
 
 <body>
