--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -6,8 +6,9 @@
   <title>前端网</title>
   <meta name="description" content="前端网，免费资源、教程">
   <meta name="keywords" content="HTML,CSS,JavaScript,React,Vue,NodeJs,前端,免费,教程,源码,开源项目">
-  <meta name="robots" content="nofollow" />
+  <!-- <meta name="robots" content="nofollow" /> -->
   <meta name="baidu-site-verification" content="code-TlaecuFEx5" />
+  <script data-ad-client="ca-pub-2087076429727327" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
