--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -7,6 +7,8 @@
   <meta name="description" content="前端网，免费资源、教程">
   <meta name="keywords" content="HTML,CSS,JavaScript,React,Vue,NodeJs,前端,免费,教程,源码,开源项目">
   <!-- <meta name="robots" content="nofollow" /> -->
+  <meta http-equiv="Content-Type" content="text/html;
+  charset=gb2312" />
   <meta name="baidu-site-verification" content="code-TlaecuFEx5" />
   <meta name="sogou_site_verification" content="wMb3kHjFi6" />
   <script data-ad-client="ca-pub-2087076429727327" async
