--- a/src/pages/blogs/detail/detail.less
+++ b/src/pages/blogs/detail/detail.less
@@ -1,3 +1,9 @@
+code{
+  display: block;
+  background-color: #ddd;
+  padding:10px;
+  border-radius: 2px;
+}
 .content {
   margin-left: 30px;
   flex: 1;
