--- a/src/pages/blogs/index.less
+++ b/src/pages/blogs/index.less
@@ -1,15 +1,18 @@
 .content {
-  margin-left: 30px;
   flex: 1;
-  background-color: #fff;
-  padding: 0 25px;
   margin-left: 250px;
+  padding: 0 25px;
+  background-color: #fff;
+
+  @media screen and (min-width: 400px) {
+    margin-left: 0;
+  }
 
   .category_list_item {
-    text-decoration: none;
     display: block;
-    padding-bottom: 10px;
     margin: 20px;
+    padding-bottom: 10px;
+    text-decoration: none;
     border-bottom: 1px solid #ddd;
 
     .title {
@@ -17,8 +20,8 @@
     }
 
     .description {
-      color: #666666;
       margin-top: 5px;
+      color: #666666;
     }
   }
 }
