--- a/src/components/hotRank/index.less
+++ b/src/components/hotRank/index.less
@@ -1,30 +1,34 @@
 .container {
-    width: 280px;
-    flex-shrink: 0;
-    flex-grow: 0;
-    margin-left: 20px;
-    background-color: #fff;
-    padding: 0 10px;
+  flex-grow: 0;
+  flex-shrink: 0;
+  width: 280px;
+  margin-left: 20px;
+  padding: 0 10px;
+  background-color: #fff;
 
-    .title {
-        font-size: 18px;
-        height: 60px;
-        line-height: 60px;
-        color: #333333;
-        border-bottom: 1px solid #ddd;
+  @media screen and (min-width: 400px) {
+    display: none;
+  }
+
+  .title {
+    height: 60px;
+    color: #333333;
+    font-size: 18px;
+    line-height: 60px;
+    border-bottom: 1px solid #ddd;
+  }
+
+  .rank_list {
+    list-style: none;
+
+    .rank_item {
+      display: block;
+      margin-top: 10px;
+      overflow: hidden;
+      color: #0396d7;
+      white-space: nowrap;
+      text-decoration: none;
+      text-overflow: ellipsis;
     }
-
-    .rank_list {
-        list-style: none;
-
-        .rank_item {
-            text-decoration: none;
-            display: block;
-            color: #0396d7;
-            margin-top:10px;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
-        }
-    }
+  }
 }
