--- a/src/pages/aboutUs/index.less
+++ b/src/pages/aboutUs/index.less
@@ -1,32 +1,36 @@
 .content {
-    background-color: #fff;
+  flex: 1;
+  min-height: 100vh;
+  margin-left: 250px;
+  padding: 20px;
+  background-color: #fff;
+
+  @media screen and (min-width: 400px) {
+    margin-left: 0;
+  }
+
+  .des {
+    display: flex;
+    flex-direction: column;
     padding: 20px;
-    margin-left: 250px;
-    min-height: 100vh;
-    flex: 1;
+    color: #58666e;
+    border-bottom: 1px dotted #ddd;
 
-    .des {
-        padding: 20px;
-        color: #58666e;
-        display: flex;
-        border-bottom: 1px dotted #ddd;
-        flex-direction: column;
+    .site {
+      flex-direction: row;
 
-        .site {
-            flex-direction: row;
+      img {
+        width: 328px;
+        height: 187.2px;
+      }
 
-            img {
-                width: 328px;
-                height: 187.2px;
-            }
-
-            p {
-                margin-bottom: 5px;
-            }
-        }
-
-        .title {
-            margin-bottom: 10px;
-        }
+      p {
+        margin-bottom: 5px;
+      }
     }
+
+    .title {
+      margin-bottom: 10px;
+    }
+  }
 }
