--- a/src/components/hotRank/index.less
+++ b/src/components/hotRank/index.less
@@ -1,3 +1,5 @@
+@import '../../pages/constant.less';
+
 .container {
   flex-grow: 0;
   flex-shrink: 0;
@@ -6,7 +8,7 @@
   padding: 0 10px;
   background-color: #fff;
 
-  @media screen and (min-width: 400px) {
+  @media screen and (max-width: @mobile-width) {
     display: none;
   }
 
