--- a/src/pages/aboutUs/index.less
+++ b/src/pages/aboutUs/index.less
@@ -1,3 +1,5 @@
+@import '.../../../constant.less';
+
 .content {
   flex: 1;
   min-height: 100vh;
@@ -5,8 +7,9 @@
   padding: 20px;
   background-color: #fff;
 
-  @media screen and (min-width: 400px) {
+  @media screen and (max-width: @mobile-width) {
     margin-left: 0;
+    padding: 0;
   }
 
   .des {
