--- a/src/pages/blogs/index.less
+++ b/src/pages/blogs/index.less
@@ -1,10 +1,12 @@
+@import '.../../../constant.less';
+
 .content {
   flex: 1;
   margin-left: 250px;
   padding: 0 25px;
   background-color: #fff;
 
-  @media screen and (min-width: 400px) {
+  @media screen and (max-width: @mobile-width) {
     margin-left: 0;
   }
 
