--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>前端网</title>
+  <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <meta name="description" content="前端网，免费资源、教程">
   <meta name="keywords" content="HTML,CSS,JavaScript,React,Vue,NodeJs,前端,免费,教程,源码,开源项目">
   <!-- <meta name="robots" content="nofollow" /> -->
