--- a/src/pages/sites/index.less
+++ b/src/pages/sites/index.less
@@ -1,3 +1,5 @@
+@import '../constant.less';
+
 .container {
   @spacing: 20px;
   display: flex;
@@ -7,23 +9,27 @@
     width: 220px;
     background-color: #fff;
 
+    @media screen and (max-width: @mobile-width) {
+      display: none;
+    }
+
     ul {
-      background-color: #fff;
       list-style: none;
+      background-color: #fff;
     }
 
     .nav_item {
-      text-align: right;
       margin: @spacing 0;
+      text-align: right;
 
       a {
         display: inline-block;
         width: 90%;
         height: 40px;
-        line-height: 40px;
-        text-decoration: none;
         color: #666666;
+        line-height: 40px;
         text-align: center;
+        text-decoration: none;
         border-top-left-radius: 20px;
         border-bottom-left-radius: 20px;
 
@@ -40,18 +46,23 @@
   }
 
   .content {
-    margin-left: 30px;
     flex: 1;
-    background-color: #fff;
+    margin-left: 30px;
     padding: 0 25px;
+    background-color: #fff;
+
+    @media screen and (max-width: @mobile-width) {
+      margin: 0;
+      padding: 0;
+    }
 
     .category_title {
-      height: 60px;
-      line-height: 60px;
       box-sizing: border-box;
-      border-bottom: 1px solid #edf5fb;
+      height: 60px;
       color: #333333;
       font-size: 18px;
+      line-height: 60px;
+      border-bottom: 1px solid #edf5fb;
     }
 
     .category_list {
@@ -59,10 +70,14 @@
       flex-wrap: wrap;
 
       .category_list_item {
-        margin-left: 10px;
         width: 25%;
         height: 120px;
         margin: 20px;
+        margin-left: 10px;
+
+        @media screen and (max-width: @mobile-width) {
+          width: 100%;
+        }
       }
     }
   }
