网址导航布局修改，网址配置修改

--- a/src/components/card/index.less
+++ b/src/components/card/index.less
@@ -1,6 +1,7 @@
 .card {
   border: 1px solid #edf5fb;
   padding: 10px;
+  height:120px;
 
   &:hover {
     background-color: #eff5fe;
@@ -9,6 +10,9 @@
   .title {
     text-decoration: none;
     color: #0396d7;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   .description {
@@ -16,7 +20,10 @@
     margin-top: 10px;
     overflow: hidden;
     text-overflow: ellipsis;
-    font-size: 14px;
+    font-size: 13px;
     line-height: 20px;
+    display:-webkit-box;
+    -webkit-line-clamp:3;
+    -webkit-box-orient:vertical;
   }
 }
