--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <title>前端网</title>
-  <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
-  <meta name="description" content="前端网，免费资源、教程">
-  <meta name="keywords" content="HTML,CSS,JavaScript,React,Vue,NodeJs,前端,免费,教程,源码,开源项目">
-  <!-- <meta name="robots" content="nofollow" /> -->
+  <meta name="viewport"
+    content="width=device-width,height=device-height,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
+  <meta name="description" content="WEB前端开发资源分享网站,免费前端开发教学视频分享,开源项目收集分享,编程提效工具分享,优质博客分享。">
+  <meta name="keywords" content="WEB前端开发,HTML,CSS,JavaScript,React,Vue,NodeJs,前端,免费,教程,源码,开源项目">
   <meta http-equiv="Content-Type" content="text/html;
   charset=gb2312" />
   <meta name="baidu-site-verification" content="code-TlaecuFEx5" />
