--- a/src/pages/blogs/index.less
+++ b/src/pages/blogs/index.less
@@ -3,7 +3,7 @@
 .content {
   flex: 1;
   margin-left: 250px;
-  padding: 0 25px;
+  padding: 25px;
   background-color: #fff;
 
   @media screen and (max-width: @mobile-width) {
@@ -12,7 +12,7 @@
 
   .category_list_item {
     display: block;
-    margin: 20px;
+    margin: 10px 0;
     padding-bottom: 10px;
     text-decoration: none;
     border-bottom: 1px solid #ddd;
