--- a/src/pages/resources/index.less
+++ b/src/pages/resources/index.less
@@ -47,33 +47,17 @@
   .content {
     flex: 1;
     margin-left: 30px;
-    padding: 0 25px;
-    background-color: #fff;
+    padding-bottom: 25px;
 
     @media screen and (max-width: @mobile-width) {
       margin-left: 0;
       padding: 0 0;
     }
 
-    .category_title {
-      display: flex;
-      justify-content: space-between;
-      box-sizing: border-box;
-      height: 60px;
-      color: #333333;
-      font-size: 18px;
-      line-height: 60px;
-      border-bottom: 1px solid #edf5fb;
-
-      .download_url {
-        color: red;
-        font-size: 14px;
-      }
-    }
-
     .category_list {
       display: flex;
       flex-wrap: wrap;
+      margin-bottom: 10px;
 
       .pdf {
         width: 300px;
@@ -84,11 +68,6 @@
         &:hover {
           text-decoration: underline;
         }
-      }
-
-      .category_list_item {
-        width: 100%;
-        margin-top: 20px;
       }
     }
   }
