--- a/src/pages/sites/index.less
+++ b/src/pages/sites/index.less
@@ -48,21 +48,11 @@
   .content {
     flex: 1;
     margin-left: 30px;
-    padding: 0 25px;
-    background-color: #fff;
+    padding-bottom: 25px;
 
     @media screen and (max-width: @mobile-width) {
       margin: 0;
       padding: 0;
-    }
-
-    .category_title {
-      box-sizing: border-box;
-      height: 60px;
-      color: #333333;
-      font-size: 18px;
-      line-height: 60px;
-      border-bottom: 1px solid #edf5fb;
     }
 
     .category_list {
