--- a/src/pages/blogs/detail/detail.less
+++ b/src/pages/blogs/detail/detail.less
@@ -41,10 +41,21 @@ code {
     h6 {
       margin: 10px 0;
     }
+
+    h1{
+      font-size: 24px;
+      font-weight: bold;
+    }
+
+    h2{
+      font-size: 22px;
+    }
+
     p {
       margin: 10px 0;
       line-height: 24px;
     }
+
     ul {
       li {
         line-height: 24px;
