--- a/src/components/hotRank/index.less
+++ b/src/components/hotRank/index.less
@@ -33,4 +33,14 @@
       text-overflow: ellipsis;
     }
   }
+
+  .tool_tags {
+    display: flex;
+    flex-wrap: wrap;
+
+    .tool_tag {
+      margin-bottom: 1rem;
+      cursor: pointer;
+    }
+  }
 }
