--- a/src/pages/sites/index.less
+++ b/src/pages/sites/index.less
@@ -1,11 +1,12 @@
 @import '../constant.less';
 
 .container {
-  @spacing: 20px;
+  @spacing: 10px;
   display: flex;
   background-color: #f5f5f5;
 
   .nav {
+    position: fixed;
     width: 220px;
     background-color: #fff;
 
@@ -47,7 +48,7 @@
 
   .content {
     flex: 1;
-    margin-left: 30px;
+    margin-left: 250px;
     padding-bottom: 25px;
 
     @media screen and (max-width: @mobile-width) {
@@ -56,9 +57,7 @@
     }
 
     .category_list {
-
       .category_list_item {
-
         @media screen and (max-width: @mobile-width) {
           width: 100%;
         }
