--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh">
 
 <head>
-  <meta charset="utf-8" />
+  <meta charset=" utf-8" />
   <meta name="viewport"
     content="width=device-width,height=device-height,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
