--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -1,13 +1,9 @@
 <!doctype html>
-<html lang="zh">
+<html>
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport"
-    content="width=device-width,height=device-height,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta http-equiv="Content-Type" content="text/html;
-  charset=gb2312" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <meta name="baidu-site-verification" content="code-TlaecuFEx5" />
   <meta name="sogou_site_verification" content="wMb3kHjFi6" />
 </head>
