--- a/src/pages/aboutUs/index.less
+++ b/src/pages/aboutUs/index.less
@@ -13,11 +13,15 @@
   }
 
   .des {
-    display: flex;
-    flex-direction: column;
     padding: 20px;
     color: #58666e;
     border-bottom: 1px dotted #ddd;
+    
+    .input{
+      width: 100%;
+      resize: none;
+      outline: none;
+    }
 
     .site {
       flex-direction: row;
