保存留言后清空内容，留言框样式修改

--- a/src/pages/aboutUs/index.less
+++ b/src/pages/aboutUs/index.less
@@ -21,6 +21,8 @@
       width: 100%;
       resize: none;
       outline: none;
+      padding:1rem;
+      border-color: #ddd;
     }
 
     .site {
