--- a/src/pages/resources/index.less
+++ b/src/pages/resources/index.less
@@ -3,6 +3,7 @@
   @spacing: 20px;
   display: flex;
   background-color: #f5f5f5;
+  width: 100%;
 
   .nav {
     min-width: 220px;
@@ -47,6 +48,7 @@
     flex: 1;
     margin-left: 30px;
     padding-bottom: 25px;
+    width: 100%;
 
     @media screen and (max-width: @mobile-width) {
       margin-left: 0;
