--- a/src/pages/blogs/index.less
+++ b/src/pages/blogs/index.less
@@ -25,5 +25,13 @@
       margin-top: 5px;
       color: #666666;
     }
+
+    .tip{
+      padding:0;
+      margin:0;
+      text-align: right;
+      font-size: 12px;
+      color: #afafaf;
+    }
   }
 }
