--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -40,6 +40,7 @@
   height: 40px;
   padding: 0 240px;
   background-color: #d05b3c;
+  overflow: auto;
 
   @media screen and (max-width: @mobile-width) {
     padding: 0;
