备案，博客列表添加时间来源，网站地图更新

--- a/src/components/footer/index.less
+++ b/src/components/footer/index.less
@@ -1,8 +1,12 @@
-.footer{
-  background-color: #061524;
-  height:5rem;
-  color:#fff;
+.footer {
+  height: 5rem;
+  color: #fff;
   font-size: 1rem;
-  text-align: center;
   line-height: 5rem;
+  text-align: center;
+  background-color: #061524;
+
+  a {
+    color: #fff;
+  }
 }
