--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <meta name="baidu-site-verification" content="code-TlaecuFEx5" />
   <meta name="sogou_site_verification" content="wMb3kHjFi6" />
+  <meta name="360-site-verification" content="e943e2d7714355d2d1af8f36b12c41f9" />
 </head>
 
 <body>
