--- a/src/pages/softwares/style.less
+++ b/src/pages/softwares/style.less
@@ -19,9 +19,12 @@
       width: 100%;
       cursor: pointer;
 
-      img {
+      .img {
         width: 200px;
         height: 150px;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
         border: 1px solid #ddd;
 
         @media screen and (max-width: @mobile-width) {
