--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <meta name="baidu-site-verification" content="code-TlaecuFEx5" />
   <meta name="sogou_site_verification" content="wMb3kHjFi6" />
+  <meta name="shenma-site-verification" content="19dfe33fcd6f20294164ba6738d0e102_1634534936">
 </head>
 
 <body>
