--- a/src/pages/softwares/style.less
+++ b/src/pages/softwares/style.less
@@ -1,10 +1,10 @@
 @import '../constant.less';
 
 .container {
-  flex: 1;
+  display: flex;
 
   .content {
-    margin-left: 250px;
+    margin-left: 30px;
     padding: 10px 10px 25px 10px;
     background-color: #fff;
     border: 1px solid #f5f5f5;
