--- a/src/pages/tools/style.less
+++ b/src/pages/tools/style.less
@@ -1,3 +1,5 @@
+@import '../constant.less';
+
 .header {
   height: 60px;
   background-color: #061524;
@@ -6,5 +8,9 @@
     height: 60px;
     margin-left: 250px;
     cursor: pointer;
+
+    @media screen and (max-width: @mobile-width) {
+      margin-left: 30px;
+    }
   }
 }
