--- a/src/pages/blogs/index.less
+++ b/src/pages/blogs/index.less
@@ -8,6 +8,20 @@
   @media screen and (max-width: @mobile-width) {
     margin-left: 0;
   }
+  
+  .ant_carousel {
+    flex: 1;
+    max-width: 100%;
+  }
+
+  .topic {
+    width:100%;
+    height: 160px;
+    color:#fff;
+    line-height: 160px;
+    text-align: center;
+    background: #364d79;
+  }
 
   .category_list_item {
     display: block;
