--- a/src/pages/topics/react/index.less
+++ b/src/pages/topics/react/index.less
@@ -9,11 +9,39 @@
     padding: 0;
   }
 
-  .category_list {
-    .category_list_item {
-      @media screen and (max-width: @mobile-width) {
-        width: 100%;
-      }
+  .doc {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+
+    & > * {
+      width: 120px;
+      text-align: center;
+    }
+  }
+
+  .blog {
+    display: block;
+    margin: 10px 0;
+    padding-bottom: 10px;
+    text-decoration: none;
+    border-bottom: 1px solid #ddd;
+
+    .title {
+      color: #0396d7;
+    }
+
+    .description {
+      margin-top: 5px;
+      color: #666666;
+    }
+
+    .tip {
+      margin: 0;
+      padding: 0;
+      color: #afafaf;
+      font-size: 12px;
+      text-align: right;
     }
   }
 }
