--- a/src/global.less
+++ b/src/global.less
@@ -1,9 +1,9 @@
-@import "./pages/constant.less";
+@import './pages/constant.less';
 
 .ant-carousel {
-  width: calc(100vw - 530px);
+  width: calc(100vw - 630px);
 
   @media screen and (max-width: @mobile-width) {
-    width:calc(100vw - 50px);
+    width: calc(100vw - 50px);
   }
 }
