--- a/src/global.less
+++ b/src/global.less
@@ -7,3 +7,15 @@
     width: calc(100vw - 50px);
   }
 }
+
+.ant-tabs-tab {
+  &.ant-tabs-tab-active {
+    a {
+      color: #1890ff;
+    }
+  }
+
+  a {
+    color: black;
+  }
+}
