--- a/src/pages/softwares/style.less
+++ b/src/pages/softwares/style.less
@@ -25,7 +25,7 @@
         background-repeat: no-repeat;
         background-position: center;
         background-size: contain;
-        border: 1px solid #ddd;
+        border: 1px solid #f9f8f8;
 
         @media screen and (max-width: @mobile-width) {
           display: none;
