--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -9,22 +9,38 @@
     margin-left: 0;
   }
 
-  .sites{
+  .part {
+    display: flex;
+    justify-content: space-between;
+    margin: 50px 0 20px 0;
+    color: rgba(0, 0, 0, 0.85);
+    font-size: 18px;
+    border-bottom: 1px solid #ddd;
+
+    &:first-child {
+      margin-top: 0;
+    }
+
+    span {
+      border-bottom: 3px solid #0396d7;
+    }
+    a {
+      font-size: 14px;
+    }
+  }
+
+  .sites {
     display: flex;
     flex-wrap: wrap;
 
-    a:not(:last-child){
-      
-      background-color: #f5f7fd;
-      color: #232222;
-    }
-
-    a{
+    a {
       margin-right: 20px;
       margin-bottom: 10px;
+      margin-left: 20px;
       padding: 5px 10px;
+      color: #232222;
       font-size: 13px;
-      margin-left:20px;
+      background-color: #f5f7fd;
     }
   }
 
