react主题增加组件模块

--- a/src/pages/topics/react/index.less
+++ b/src/pages/topics/react/index.less
@@ -12,11 +12,22 @@
   .doc {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 10px;
 
     & > * {
-      width: 120px;
+      width: 110px;
       text-align: center;
+    }
+  }
+
+  .components {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+
+    .component {
+      width: 200px;
+      height: 200px;
     }
   }
 
