--- a/src/pages/blogs/index.less
+++ b/src/pages/blogs/index.less
@@ -21,6 +21,7 @@
   .category_list_item {
     display: block;
     margin: 10px 0;
+    padding-bottom: 10px;
     text-decoration: none;
     border-bottom: 1px solid #ddd;
 
