--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -12,7 +12,7 @@
   .part {
     display: flex;
     justify-content: space-between;
-    margin: 50px 0 20px 0;
+    margin: 20px 0;
     color: rgba(0, 0, 0, 0.85);
     font-size: 18px;
     border-bottom: 1px solid #ddd;
@@ -34,9 +34,7 @@
     flex-wrap: wrap;
 
     a {
-      margin-right: 20px;
-      margin-bottom: 10px;
-      margin-left: 20px;
+      margin: 5px;
       padding: 5px 10px;
       color: #232222;
       font-size: 13px;
