--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -29,6 +29,22 @@
     }
   }
 
+  .free_resource {
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
+
+    & > * {
+      flex-grow: 1;
+    }
+
+    .resource_item {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+  }
+
   .sites {
     display: flex;
     flex-wrap: wrap;
@@ -41,7 +57,6 @@
       background-color: #f5f7fd;
     }
   }
-
   .topic {
     width: 100%;
     height: 160px;
