--- a/src/pages/topics/vscode/index.less
+++ b/src/pages/topics/vscode/index.less
@@ -2,7 +2,7 @@
 
 .content {
   flex: 1;
-  margin-left: 30px;
+  margin-left: 250px;
 
   @media screen and (max-width: @mobile-width) {
     margin: 0;
@@ -15,8 +15,7 @@
     gap: 10px;
 
     & > * {
-      width: 110px;
-      text-align: center;
+      width: 44%;
     }
   }
 }
