--- a/src/global.less
+++ b/src/global.less
@@ -1,5 +1,9 @@
 @import './pages/constant.less';
 
+body {
+  background-color: #f0f4fb;
+}
+
 .ant-carousel {
   width: calc(100vw - 630px);
 
@@ -20,6 +24,6 @@
   }
 }
 
-.react-pdf__Page__textContent{
+.react-pdf__Page__textContent {
   width: 100vw !important;
 }
