--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -44,6 +44,10 @@
       display: flex;
       flex-direction: column;
       gap: 10px;
+
+      a {
+        color: #0396d7;
+      }
     }
   }
 
@@ -90,6 +94,25 @@
       color: #afafaf;
       font-size: 12px;
       text-align: right;
+    }
+  }
+
+  .job {
+    width: 24%;
+    padding: 10px;
+    background-color: #f5f7fd;
+
+    span {
+      color: rgb(70, 69, 69);
+      font-weight: bold;
+    }
+
+    p {
+      color: #7c7a7a;
+    }
+
+    &:hover {
+      background-color: #dce3f8;
     }
   }
 }
