--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -103,8 +103,8 @@
     background-color: #f5f7fd;
 
     span {
-      color: rgb(70, 69, 69);
-      font-weight: bold;
+      color: #0396d7;
+      font-weight: 500;
     }
 
     p {
