--- a/src/pages/blogs/detail/detail.less
+++ b/src/pages/blogs/detail/detail.less
@@ -1,6 +1,6 @@
 @import '../../constant.less';
 
-pre{
+pre {
   background-color: #ddd;
 }
 
@@ -9,6 +9,14 @@ code {
   padding: 10px;
   background-color: #ddd;
   border-radius: 2px;
+}
+
+blockquote {
+  margin: 1rem 0;
+  padding: 0.25rem 0 0.25rem 1rem;
+  color: #999;
+  font-size: 1rem;
+  border-left: 0.2rem solid #dfe2e5;
 }
 
 .content {
