静态文件路径修改

--- a/front/src/pages/document.ejs
+++ b/front/src/pages/document.ejs
@@ -10,8 +10,8 @@
   <meta name="baidu_union_verify" content="6f7381d4136832e99f86da0d67739a46">
   <meta name="bytedance-verification-code" content="d+FL9L0/4KxPwFbqXgmT" />
 
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2087076429727327"
-    crossOrigin="anonymous"></script>
+  <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2087076429727327"
+    crossOrigin="anonymous"></script> -->
 </head>
 
 <body>
