--- a/front/src/components/footer/index.less
+++ b/front/src/components/footer/index.less
@@ -1,8 +1,7 @@
 .footer {
-  height: 5rem;
+  padding: 1rem 0;
   color: #fff;
   font-size: 1rem;
-  line-height: 5rem;
   text-align: center;
   background-color: #061524;
 
