--- a/front/src/pages/revenue/index.less
+++ b/front/src/pages/revenue/index.less
@@ -1,36 +1,25 @@
-@import '../../constant.less';
+@import '.../../../constant.less';
 
 .content {
-  flex: 1;
   margin-left: 250px;
+  padding: 25px;
+  background-color: #fff;
+  flex: 1;
 
   @media screen and (max-width: @mobile-width) {
-    margin: 0;
-    padding: 0;
+    margin-left: 0;
   }
 
-  .doc {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-
-    & > * {
-      width: 150px;
-    }
+  .topic {
+    width: 100%;
+    height: 160px;
+    color: #fff;
+    line-height: 160px;
+    text-align: center;
+    background: #364d79;
   }
 
-  .components {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-
-    .component {
-      width: 200px;
-      height: 200px;
-    }
-  }
-
-  .blog {
+  .category_list_item {
     display: block;
     margin: 10px 0;
     padding-bottom: 10px;
