--- a/front/src/pages/document.ejs
+++ b/front/src/pages/document.ejs
@@ -9,13 +9,11 @@
   <meta name="360-site-verification" content="e943e2d7714355d2d1af8f36b12c41f9" />
   <meta name="baidu_union_verify" content="6f7381d4136832e99f86da0d67739a46">
   <meta name="bytedance-verification-code" content="d+FL9L0/4KxPwFbqXgmT" />
-
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2087076429727327"
+  <script defer src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2087076429727327"
     crossOrigin="anonymous"></script>
 </head>
 
 <body>
   <div id="root"></div>
 </body>
-
 </html>
