--- a/front/src/pages/blogs/detail/detail.less
+++ b/front/src/pages/blogs/detail/detail.less
@@ -19,6 +19,23 @@ blockquote {
   border-left: 0.2rem solid #dfe2e5;
 }
 
+table{
+  border-collapse: collapse;
+  margin: 1rem 0;
+  display: block;
+  overflow-x: auto;
+  tr:nth-child(2n) {
+    background: #f6f8fa;
+  }
+  tr {
+    border-top: 1px solid #dfe2e5;
+    td, th {
+      border: 1px solid #eee;
+      padding: 0.6em 1em;
+    }
+  }
+}
+
 .content {
   flex: 1;
   margin-left: 250px;
