--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -9,6 +9,11 @@
   <meta name="360-site-verification" content="e943e2d7714355d2d1af8f36b12c41f9" />
   <meta name="baidu_union_verify" content="6f7381d4136832e99f86da0d67739a46">
   <meta name="bytedance-verification-code" content="d+FL9L0/4KxPwFbqXgmT" />
+  <meta http-equiv="x-dns-prefetch-control" content="on">
+  <link rel="dns-prefetch" href="//cloud.qianduan.shop">
+  <link rel="dns-prefetch" href="//pagead2.googlesyndication.com">
+  <link rel="dns-prefetch" href="//www.googletagmanager.com">
+  <link rel="dns-prefetch" href="//tpc.googlesyndication.com">
   <script defer src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2087076429727327"
     crossOrigin="anonymous"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
