--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
-  <meta name="baidu-site-verification" content="code-TlaecuFEx5" />
+  <meta name="baidu-site-verification" content="code-xqXJt6e1zO" />
   <meta name="sogou_site_verification" content="wMb3kHjFi6" />
   <meta name="shenma-site-verification" content="19dfe33fcd6f20294164ba6738d0e102_1634534936">
   <meta name="360-site-verification" content="e943e2d7714355d2d1af8f36b12c41f9" />
@@ -11,9 +11,9 @@
   <meta name="bytedance-verification-code" content="d+FL9L0/4KxPwFbqXgmT" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
   <link rel="dns-prefetch" href="//cloud.qianduan.shop">
-  <link rel="dns-prefetch" href="//pagead2.googlesyndication.com">
+  <!-- <link rel="dns-prefetch" href="//pagead2.googlesyndication.com">
   <link rel="dns-prefetch" href="//www.googletagmanager.com">
-  <link rel="dns-prefetch" href="//tpc.googlesyndication.com">
+  <link rel="dns-prefetch" href="//tpc.googlesyndication.com"> -->
   <script defer src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2087076429727327"
     crossOrigin="anonymous"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
