--- a/src/pages/softwares/detail/detail.less
+++ b/src/pages/softwares/detail/detail.less
@@ -31,38 +31,63 @@ code {
 
   article {
     padding: 20px 0;
-
-    img {
-      width: 100%;
-    }
-
     h1,
     h2,
     h3,
     h4,
     h5,
     h6 {
-      margin: 10px 0;
+      margin: 8px 0 16px;
+      color: #4f4f4f;
+      font-weight: 600;
     }
 
     h1 {
-      font-weight: bold;
       font-size: 24px;
+      line-height: 32px;
+      text-align: center;
     }
 
     h2 {
       font-size: 22px;
+      line-height: 30px;
+    }
+
+    h3 {
+      font-size: 20px;
+      line-height: 28px;
+    }
+
+    h4 {
+      font-size: 18px;
+      line-height: 26px;
+    }
+
+    h5,
+    h6 {
+      font-size: 16px;
+      line-height: 24px;
     }
 
     p {
-      margin: 10px 0;
-      line-height: 24px;
+      margin: 0 0 16px;
+      overflow: hidden;
+      overflow-x: auto;
+      color: #4d4d4d;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 26px;
     }
 
     ul {
       li {
+        margin-left: 2rem;
         line-height: 24px;
       }
+    }
+
+    img {
+      max-width: 100%;
     }
   }
 }
