--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -11,9 +11,14 @@
   <meta name="bytedance-verification-code" content="d+FL9L0/4KxPwFbqXgmT" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
   <link rel="dns-prefetch" href="//cloud.qianduan.shop">
-  <!-- <link rel="dns-prefetch" href="//pagead2.googlesyndication.com">
+  <link rel="dns-prefetch" href="//pagead2.googlesyndication.com">
+  <link rel="dns-prefetch" href="//googleads.g.doubleclick.net">
   <link rel="dns-prefetch" href="//www.googletagmanager.com">
-  <link rel="dns-prefetch" href="//tpc.googlesyndication.com"> -->
+  <link rel="dns-prefetch" href="//tpc.googlesyndication.com">
+</head>
+
+<body>
+  <div id="root"></div>
   <script defer src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2087076429727327"
     crossOrigin="anonymous"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -29,10 +34,6 @@
     gtag('config', 'G-HB1N0Q442R');
 
   </script>
-</head>
-
-<body>
-  <div id="root"></div>
 </body>
 
 </html>
