--- a/src/pages/blogs/index.less
+++ b/src/pages/blogs/index.less
@@ -1,6 +1,6 @@
 @import '.../../../constant.less';
 
-.content {
+.blog_content {
   margin-left: 250px;
   padding: 25px;
   background-color: #fff;
