--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -19,10 +19,10 @@
 
 <body>
   <div id="root"></div>
-  <script defer src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2087076429727327"
-    crossOrigin="anonymous"></script>
+  <!-- <script defer src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2087076429727327"
+    crossOrigin="anonymous"></script> -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HB1N0Q442R"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-HB1N0Q442R"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
 
@@ -33,7 +33,7 @@
 
     gtag('config', 'G-HB1N0Q442R');
 
-  </script>
+  </script> -->
 </body>
 
 </html>
