--- a/src/pages/home/index.less
+++ b/src/pages/home/index.less
@@ -1,6 +1,6 @@
 @import '.../../../constant.less';
 
-.content {
+.home_content {
   margin-left: 240px;
   padding: 25px;
   background-color: #fff;
