--- a/src/pages/softwares/detail/detail.less
+++ b/src/pages/softwares/detail/detail.less
@@ -1,18 +1,18 @@
 @import '../../constant.less';
 
-code {
-  display: block;
-  padding: 10px;
-  background-color: #ddd;
-  border-radius: 2px;
-}
-
-.content {
+.software_detail_content {
   flex: 1;
   margin-left: 30px;
   margin-left: 250px;
   padding: 0 25px;
   background-color: #fff;
+
+  code {
+    display: block;
+    padding: 10px;
+    background-color: #ddd;
+    border-radius: 2px;
+  }
 
   @media screen and (max-width: @mobile-width) {
     margin-left: 0;
