--- a/src/pages/tools/style.less
+++ b/src/pages/tools/style.less
@@ -1,6 +1,6 @@
 @import '../constant.less';
 
-.header {
+.tool_header {
   height: 60px;
   background-color: #061524;
 
@@ -13,8 +13,4 @@
       margin-left: 30px;
     }
   }
-}
-
-.site {
-  color: black;
 }
