--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -1,20 +1,18 @@
 @import '../pages/constant.less';
-:global {
-  * {
-    margin: 0;
-    padding: 0;
-  }
-
-  body {
-    background-color: #f5f5f5;
-  }
-
-  html {
-    font-size: 62.5%;
-  }
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.header {
+body {
+  background-color: #f5f5f5;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+.layout_header {
   position: relative;
   display: flex;
   align-items: center;
@@ -67,7 +65,7 @@
   }
 }
 
-.nav {
+.layout_nav {
   position: sticky;
   top: 0;
   z-index: 1;
@@ -105,34 +103,7 @@
     }
   }
 }
-
-.notice {
-  padding: 10px 0;
-  font-size: 12px;
-  text-align: right;
-  background-color: #fff;
-  border-bottom: 1px solid #ddd;
-
-  img {
-    width: 20px;
-    height: 20px;
-  }
-}
-
-.content {
+.layout_content {
   display: flex;
   padding-top: 20px;
-}
-
-.footer {
-  height: 40px;
-  color: #486185;
-  font-size: 14px;
-  line-height: 40px;
-  text-align: center;
-  background-color: #202d40;
-
-  .author {
-    color: #7d818a;
-  }
 }
