--- a/src/pages/blogs/detail/detail.less
+++ b/src/pages/blogs/detail/detail.less
@@ -1,43 +1,6 @@
 @import '../../constant.less';
 
-pre {
-  background-color: #ddd;
-}
-
-code {
-  display: block;
-  padding: 10px;
-  background-color: #ddd;
-  border-radius: 2px;
-}
-
-blockquote {
-  margin: 1rem 0;
-  padding: 0.25rem 0 0.25rem 1rem;
-  color: #999;
-  font-size: 1rem;
-  border-left: 0.2rem solid #dfe2e5;
-}
-
-table {
-  display: block;
-  margin: 1rem 0;
-  overflow-x: auto;
-  border-collapse: collapse;
-  tr:nth-child(2n) {
-    background: #f6f8fa;
-  }
-  tr {
-    border-top: 1px solid #dfe2e5;
-    td,
-    th {
-      padding: 0.6em 1em;
-      border: 1px solid #eee;
-    }
-  }
-}
-
-.content {
+.blog_detail_content {
   flex: 1;
   margin-left: 250px;
   padding: 0 25px;
@@ -118,6 +81,43 @@ table {
 
     img {
       max-width: 100%;
+    }
+  }
+
+  pre {
+    background-color: #ddd;
+  }
+
+  code {
+    display: block;
+    padding: 10px;
+    background-color: #ddd;
+    border-radius: 2px;
+  }
+
+  blockquote {
+    margin: 1rem 0;
+    padding: 0.25rem 0 0.25rem 1rem;
+    color: #999;
+    font-size: 1rem;
+    border-left: 0.2rem solid #dfe2e5;
+  }
+
+  table {
+    display: block;
+    margin: 1rem 0;
+    overflow-x: auto;
+    border-collapse: collapse;
+    tr:nth-child(2n) {
+      background: #f6f8fa;
+    }
+    tr {
+      border-top: 1px solid #dfe2e5;
+      td,
+      th {
+        padding: 0.6em 1em;
+        border: 1px solid #eee;
+      }
     }
   }
 }
