--- a/src/pages/solution/detail/detail.less
+++ b/src/pages/solution/detail/detail.less
@@ -1,30 +1,18 @@
 @import '../../constant.less';
 
-pre {
-  background-color: #ddd;
-}
-
-code {
-  display: block;
-  padding: 10px;
-  background-color: #ddd;
-  border-radius: 2px;
-}
-
-blockquote {
-  margin: 1rem 0;
-  padding: 0.25rem 0 0.25rem 1rem;
-  color: #999;
-  font-size: 1rem;
-  border-left: 0.2rem solid #dfe2e5;
-}
-
-.content {
+.solution_detail_content {
   flex: 1;
+  margin-left: 30px;
   margin-left: 250px;
   padding: 0 25px;
-  overflow-y: scroll;
   background-color: #fff;
+
+  code {
+    display: block;
+    padding: 10px;
+    background-color: #ddd;
+    border-radius: 2px;
+  }
 
   @media screen and (max-width: @mobile-width) {
     margin-left: 0;
@@ -43,32 +31,57 @@ blockquote {
 
   article {
     padding: 20px 0;
-
     h1,
     h2,
     h3,
     h4,
     h5,
     h6 {
-      margin: 10px 0;
+      margin: 8px 0 16px;
+      color: #4f4f4f;
+      font-weight: 600;
     }
 
     h1 {
-      font-weight: bold;
       font-size: 24px;
+      line-height: 32px;
+      text-align: center;
     }
 
     h2 {
       font-size: 22px;
+      line-height: 30px;
+    }
+
+    h3 {
+      font-size: 20px;
+      line-height: 28px;
+    }
+
+    h4 {
+      font-size: 18px;
+      line-height: 26px;
+    }
+
+    h5,
+    h6 {
+      font-size: 16px;
+      line-height: 24px;
     }
 
     p {
-      margin: 10px 0;
-      line-height: 24px;
+      margin: 0 0 16px;
+      overflow: hidden;
+      overflow-x: auto;
+      color: #4d4d4d;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 26px;
     }
 
     ul {
       li {
+        margin-left: 2rem;
         line-height: 24px;
       }
     }
